# flopoco

./: .gitignore  ActiveOperators.txt  CMakeLists.txt  TODO.org  cleanTest.sh  flopoco_autocomplete  gmon.out  initTest.sh  makeTest.sh  message  report  testScript.sh
doc/: pipelining.org
doc/ContinousTests/: installationGuide
doc/doxygen/: gen.sh
doc/flopoco_developer_manual/: flopoco_developer_manual.tex
doc/web/: ReleaseNotes.txt  flopoco_installation.html  index.html  operators.html
src/: Active.txt  Factories.cpp  FixConstant.cpp  FloPoCo.hpp  FlopocoStream.cpp  FlopocoStream.hpp  Instance.cpp  Instance.hpp  Interfaced.txt  LexerContext.hpp  Operator.cpp  Operator.hpp  ShiftReg.cpp  ShiftReg.hpp  Signal.cpp  Signal.hpp  SourceFileList.txt  Table.cpp  Table.hpp  Target.cpp  Target.hpp  TargetModel.cpp  TutorialOperator.cpp  TutorialOperator.hpp  UserDefinedOperator.cpp  UserDefinedOperator.hpp  UserInterface.cpp  UserInterface.hpp  VHDLLexerRule.l  main.cpp  main_minimal.cpp  utils.cpp  utils.hpp
src/Apps/: Collision.cpp  FPFMAcc.cpp  FPJacobi.cpp
src/Attic/: FPPipeline.cpp
src/AutoTest/: AutoTest.cpp  AutoTest.hpp  TestState.cpp  TestState.hpp  cleanOpTest.sh  cleanTest.sh  initOpTest.sh  initTests.sh  testScript.sh
src/BitHeap/: Bit.cpp  Bit.hpp  BitHeap.cpp  BitHeap.hpp  BitHeapPlotter.cpp  BitHeapTest.cpp  BitheapNew.cpp  BitheapNew.hpp  BitheapPlotter.cpp  BitheapPlotter.hpp  BitheapTest.cpp  BitheapTest.hpp  CompressionStrategy.cpp  CompressionStrategy.hpp  Compressor.cpp  Compressor.hpp  FirstFittingCompressionStrategy.cpp  FirstFittingCompressionStrategy.hpp  MaxEfficiencyCompressionStrategy.cpp  MaxEfficiencyCompressionStrategy.hpp  OptimalCompressionStrategy.cpp  OptimalCompressionStrategy.hpp  ParandehAfsharCompressionStrategy.cpp  ParandehAfsharCompressionStrategy.hpp  Solution.cpp  Solution.hpp
src/Complex/: FixComplexKCM.cpp  FixComplexKCM.hpp  FixComplexMult.cpp  FixFFT.cpp  FixFFT.hpp  IntFFT.cpp  IntFFTButterfly.cpp  IntFFTLevelDIT2.cpp  IntTwiddleMultiplier.cpp  IntTwiddleMultiplierAlternative.cpp  OldFixedComplexMultiplier.cpp  fakemain.cpp  toremove.txt
src/ConstMult/: ConstMultPAG.cpp  ConstMultPAG.hpp  ConstMultPAG_types.cpp  ConstMultPAG_types.hpp  FPConstDiv.cpp  FPConstDiv.hpp  FPConstMult.cpp  FPConstMult.hpp  FPRealKCM.cpp  FixRealConstMult.cpp  FixRealConstMult.hpp  FixRealKCM.cpp  FixRealKCM.hpp  FixRealShiftAdd.cpp  FixRealShiftAdd.hpp  IntConstDiv.cpp  IntConstDiv.hpp  IntConstMCM.cpp  IntConstMult.cpp  IntConstMult.hpp  IntConstMultOpt.cpp  IntConstMultOpt.hpp  IntConstMultRPAG.cpp  IntConstMultRPAG.hpp  IntConstMultShiftAdd.cpp  IntConstMultShiftAdd.hpp  IntConstMultShiftAddOpt.cpp  IntConstMultShiftAddOpt.hpp  IntConstMultShiftAddOptTernary.cpp  IntConstMultShiftAddOptTernary.hpp  IntConstMultShiftAddRPAG.cpp  IntConstMultShiftAddRPAG.hpp  IntConstMultShiftAddTypes.cpp  IntConstMultShiftAddTypes.hpp  IntIntKCM.cpp  IntIntKCM.hpp  KCMDoc.tex  README  ShiftAddDag.cpp  WordLengthCalculator.cpp  (+5 more)
src/Conversions/: FP2Fix.cpp  FP2Fix.hpp  Fix2FP.cpp  InputIEEE.cpp  OutputIEEE.cpp  OutputIEEE.hpp  PIF2Posit.cpp  Posit2FP.cpp  Posit2FP.hpp  Posit2PIF.cpp
src/ExpLog/: FPExp.cpp  FPExp.hpp  FPLog.cpp  FPLog.hpp  FPLogIterative.cpp  FPLogIterative.hpp  FPPow.cpp  FPPow.hpp  IterativeLog.cpp
src/FPAddSub/: FPAdd.cpp  FPAdd.hpp  FPAdd3Input.cpp  FPAdd3Input.hpp  FPAddDualPath.cpp  FPAddDualPath.hpp  FPAddSinglePath.cpp  FPAddSinglePath.hpp  FPAddSinglePathIEEE.cpp  FPAddSinglePathIEEE.hpp  FPAddSub.cpp  FPAddSub.hpp
src/FPComposite/: FP2DNorm.cpp  FPDotProduct.cpp  FPFMA.cpp  FPFMA.hpp  FPLargeAcc.cpp  FPLargeAcc.hpp  FPSumOf3Squares.cpp  LargeAccToFP.cpp
src/FPDivSqrt/: FPDiv.cpp  FPDiv.hpp  FPSqrt.cpp  FPSqrt.hpp  SelFunctionTable.cpp
src/FPMultSquare/: FPMult.cpp  FPMult.hpp  FPMultKaratsuba.cpp  FPSquare.cpp  FPSquare.hpp
src/Factories/: Interfaced.txt  MakeFactory.sh  factoring.txt  head.txt  headers.txt
src/FixFilters/: FixFIR.cpp  FixFIR.hpp  FixHalfSine.cpp  FixHalfSine.hpp  FixIIR.cpp  FixIIR.hpp  FixSIF.cpp  FixSIF.hpp  FixSOPC.cpp  FixSOPC.hpp  butterworth.py  butteworth.py
src/FixFunctions/: BasicPolyApprox.cpp  BasicPolyApprox.hpp  BipartiteTable.cpp  FixFunction.cpp  FixFunction.hpp  FixFunctionByMultipartiteTable.cpp  FixFunctionByMultipartiteTable.hpp  FixFunctionByPiecewisePoly.cpp  FixFunctionByPiecewisePoly.hpp  FixFunctionBySimplePoly.cpp  FixFunctionBySimplePoly.hpp  FixFunctionByTable.cpp  FixFunctionByTable.hpp  FixFunctionByVaryingPiecewisePoly.cpp  FixHornerEvaluator.cpp  GenericTable.cpp  GenericTable.hpp  Multipartite.cpp  Multipartite.hpp  PiecewisePolyApprox.cpp  PiecewisePolyApprox.hpp  VaryingPiecewisePolyApprox.cpp  VaryingPiecewisePolyApprox.hpp
src/IEEE/: IEEEAdd.cpp  IEEEFMA.cpp  IEEEFMA.hpp
src/IntAddSubCmp/: BasicCompressor.cpp  BasicCompressor.hpp  CarryGenerationCircuit.cpp  IntAdder.cpp  IntAdder.hpp  IntAdderAlternative.cpp  IntAdderAlternative.hpp  IntAdderClassical.cpp  IntAdderClassical.hpp  IntAdderShortLatency.cpp  IntAdderShortLatency.hpp  IntAdderSpecific.cpp  IntAdderTree.cpp  IntAdderTree.hpp  IntComparator.cpp  IntComparator.hpp  IntComparatorSpecific.cpp  IntDualAddSub.cpp  IntDualAddSub.hpp  IntDualSub.cpp  IntDualSub.hpp  IntMultiAdder.cpp  IntMultiAdder.hpp  LongIntAdderAddAddMuxGen1.cpp  LongIntAdderAddAddMuxGen2.cpp  LongIntAdderCmpAddIncGen1.cpp  LongIntAdderCmpAddIncGen2.cpp  LongIntAdderCmpCmpAddGen1.cpp  LongIntAdderCmpCmpAddGen2.cpp  LongIntAdderMuxNetwork.cpp
src/IntMult/: BaseMultiplier.hpp  BaseMultiplier2xk.cpp  BaseMultiplier2xk.hpp  BaseMultiplierCategory.cpp  BaseMultiplierCategory.hpp  BaseMultiplierCollection.cpp  BaseMultiplierCollection.hpp  BaseMultiplierDSP.cpp  BaseMultiplierDSP.hpp  BaseMultiplierDSPKaratsuba.cpp  BaseMultiplierDSPKaratsuba.hpp  BaseMultiplierDSPKarazuba.cpp  BaseMultiplierDSPKarazuba.hpp  BaseMultiplierDSPSuperTilesXilinx.cpp  BaseMultiplierDSPSuperTilesXilinx.hpp  BaseMultiplierIrregularLUTXilinx.cpp  BaseMultiplierIrregularLUTXilinx.hpp  (+44 more)
tools/: EraseComments.sh  ise-runsyn.py  quartus-runsyn.py  vivado-runsyn.py
(+166 files in other folders)
